# tensorrt_lib

./: .gitignore  CITATION.cff  LICENSE  README.md
tensorrt_cpp/nn_handler_lib/: CMakeLists.txt
tensorrt_cpp/nn_handler_lib/include/nn_handler_lib/: nn_handler.hpp
tensorrt_cpp/nn_handler_lib/src/: nn_handler.cpp
tensorrt_cpp/tensorrt_cpp_api/include/tensorrt_cpp_api/: engine.h
tensorrt_cpp/tensorrt_cpp_api/src/: engine.cpp
tensorrt_cpp/tensorrt_cpp_lib/: CMakeLists.txt
tensorrt_cpp/tensorrt_cpp_lib/include/tensorrt_cpp_lib/: tensorrt_engine.h
tensorrt_cpp/tensorrt_cpp_lib/src/: tensorrt_engine.cpp
tensorrt_python/: engine.py  tensorrt_engine.py
use_cases/inference_cpp/: CMakeLists.txt
use_cases/inference_cpp/include/: aux_fcn.hpp
use_cases/inference_cpp/multi_io_multi_batch/: multi_io_multi_batch.cpp
use_cases/inference_cpp/multi_io_multi_batch_cuda/: multi_io_multi_batch_cuda.cpp
use_cases/inference_cpp/multi_io_multi_batch_input_cpu_output_cpu/: multi_io_multi_batch_input_cpu_output_cpu.cpp
use_cases/inference_cpp/multi_io_multi_batch_input_cpu_output_gpu/: multi_io_multi_batch_input_cpu_output_gpu.cpp
use_cases/inference_cpp/multi_io_multi_batch_input_gpu_output_cpu/: multi_io_multi_batch_input_gpu_output_cpu.cpp
use_cases/inference_cpp/multi_io_multi_batch_input_gpu_output_gpu/: multi_io_multi_batch_input_gpu_output_gpu.cpp
use_cases/inference_cpp/multi_io_single_batch/: multi_io_single_batch.cpp
use_cases/inference_cpp/multi_io_single_batch_cuda/: multi_io_single_batch_cuda.cpp
use_cases/inference_cpp/multi_io_single_batch_input_cpu_output_cpu/: multi_io_single_batch_input_cpu_output_cpu.cpp
use_cases/inference_cpp/multi_io_single_batch_input_cpu_output_gpu/: multi_io_single_batch_input_cpu_output_gpu.cpp
use_cases/inference_cpp/multi_io_single_batch_input_gpu_output_cpu/: multi_io_single_batch_input_gpu_output_cpu.cpp
use_cases/inference_cpp/multi_io_single_batch_input_gpu_output_gpu/: multi_io_single_batch_input_gpu_output_gpu.cpp
use_cases/inference_cpp/single_io_multi_batch/: single_io_multi_batch.cpp
use_cases/inference_cpp/single_io_multi_batch_cuda/: single_io_multi_batch_cuda.cpp
use_cases/inference_cpp/single_io_multi_batch_input_cpu_output_cpu/: single_io_multi_batch_input_cpu_output_cpu.cpp
use_cases/inference_cpp/single_io_multi_batch_input_cpu_output_gpu/: single_io_multi_batch_input_cpu_output_gpu.cpp
use_cases/inference_cpp/single_io_multi_batch_input_gpu_output_cpu/: single_io_multi_batch_input_gpu_output_cpu.cpp
use_cases/inference_cpp/single_io_multi_batch_input_gpu_output_gpu/: single_io_multi_batch_input_gpu_output_gpu.cpp
use_cases/inference_cpp/single_io_single_batch/: single_io_single_batch.cpp
use_cases/inference_cpp/single_io_single_batch_cuda/: single_io_single_batch_cuda.cpp
use_cases/inference_cpp/single_io_single_batch_input_cpu_output_cpu/: single_io_single_batch_input_cpu_output_cpu.cpp
use_cases/inference_cpp/single_io_single_batch_input_cpu_output_gpu/: single_io_single_batch_input_cpu_output_gpu.cpp
use_cases/inference_cpp/single_io_single_batch_input_gpu_output_cpu/: single_io_single_batch_input_gpu_output_cpu.cpp
use_cases/inference_cpp/single_io_single_batch_input_gpu_output_gpu/: single_io_single_batch_input_gpu_output_gpu.cpp
use_cases/inference_python/: multi_io_multi_batch.py  multi_io_single_batch.py  single_io_multi_batch.py  single_io_single_batch.py
use_cases/models/multi_io/: model_multi_batch.onnx  model_single_batch.onnx  weights.pt
use_cases/models/single_io/: model_multi_batch.onnx  model_single_batch.onnx  weights.pt
use_cases/scripts/multi_io/: dummy_model.py  export_onnx_multi_batch.py  export_onnx_single_batch.py  inference_time.py  save_data.py
use_cases/scripts/single_io/: dummy_model.py  export_onnx_multi_batch.py  export_onnx_single_batch.py  inference_time.py  save_data.py
use_cases/test_data/multi_io/: x1.txt  x2.txt  x3.txt  y1.txt  y2.txt
use_cases/test_data/single_io/: x.txt  y.txt
