cmake_minimum_required(VERSION 3.16)
project(inference_tensorrt)

# Set C++ version and optimization level
set(CMAKE_CXX_STANDARD 14)

# To include the "include" folder to the path, and OpenCV
include_directories(include)

# To compile the library of TensorRT
add_subdirectory(../../tensorrt_cpp/tensorrt_cpp_lib ${CMAKE_BINARY_DIR}/tensorrt_cpp_lib)
add_subdirectory(../../tensorrt_cpp/nn_handler_lib ${CMAKE_BINARY_DIR}/nn_handler_lib)

# To compile the main program
add_executable(single_io_single_batch_input_cpu_output_cpu single_io_single_batch_input_cpu_output_cpu/single_io_single_batch_input_cpu_output_cpu.cpp)
target_link_libraries(single_io_single_batch_input_cpu_output_cpu PRIVATE nn_handler_lib)

add_executable(single_io_single_batch_input_gpu_output_cpu single_io_single_batch_input_gpu_output_cpu/single_io_single_batch_input_gpu_output_cpu.cpp)
target_link_libraries(single_io_single_batch_input_gpu_output_cpu PRIVATE nn_handler_lib)

add_executable(single_io_single_batch_input_cpu_output_gpu single_io_single_batch_input_cpu_output_gpu/single_io_single_batch_input_cpu_output_gpu.cpp)
target_link_libraries(single_io_single_batch_input_cpu_output_gpu PRIVATE nn_handler_lib)

add_executable(single_io_single_batch_input_gpu_output_gpu single_io_single_batch_input_gpu_output_gpu/single_io_single_batch_input_gpu_output_gpu.cpp)
target_link_libraries(single_io_single_batch_input_gpu_output_gpu PRIVATE nn_handler_lib)

add_executable(single_io_multi_batch_input_cpu_output_cpu single_io_multi_batch_input_cpu_output_cpu/single_io_multi_batch_input_cpu_output_cpu.cpp)
target_link_libraries(single_io_multi_batch_input_cpu_output_cpu PRIVATE nn_handler_lib)

add_executable(single_io_multi_batch_input_gpu_output_cpu single_io_multi_batch_input_gpu_output_cpu/single_io_multi_batch_input_gpu_output_cpu.cpp)
target_link_libraries(single_io_multi_batch_input_gpu_output_cpu PRIVATE nn_handler_lib)

add_executable(single_io_multi_batch_input_cpu_output_gpu single_io_multi_batch_input_cpu_output_gpu/single_io_multi_batch_input_cpu_output_gpu.cpp)
target_link_libraries(single_io_multi_batch_input_cpu_output_gpu PRIVATE nn_handler_lib)

add_executable(single_io_multi_batch_input_gpu_output_gpu single_io_multi_batch_input_gpu_output_gpu/single_io_multi_batch_input_gpu_output_gpu.cpp)
target_link_libraries(single_io_multi_batch_input_gpu_output_gpu PRIVATE nn_handler_lib)


add_executable(multi_io_single_batch_input_cpu_output_cpu multi_io_single_batch_input_cpu_output_cpu/multi_io_single_batch_input_cpu_output_cpu.cpp)
target_link_libraries(multi_io_single_batch_input_cpu_output_cpu PRIVATE nn_handler_lib)

add_executable(multi_io_single_batch_input_gpu_output_cpu multi_io_single_batch_input_gpu_output_cpu/multi_io_single_batch_input_gpu_output_cpu.cpp)
target_link_libraries(multi_io_single_batch_input_gpu_output_cpu PRIVATE nn_handler_lib)

add_executable(multi_io_single_batch_input_cpu_output_gpu multi_io_single_batch_input_cpu_output_gpu/multi_io_single_batch_input_cpu_output_gpu.cpp)
target_link_libraries(multi_io_single_batch_input_cpu_output_gpu PRIVATE nn_handler_lib)

add_executable(multi_io_single_batch_input_gpu_output_gpu multi_io_single_batch_input_gpu_output_gpu/multi_io_single_batch_input_gpu_output_gpu.cpp)
target_link_libraries(multi_io_single_batch_input_gpu_output_gpu PRIVATE nn_handler_lib)


add_executable(multi_io_multi_batch_input_cpu_output_cpu multi_io_multi_batch_input_cpu_output_cpu/multi_io_multi_batch_input_cpu_output_cpu.cpp)
target_link_libraries(multi_io_multi_batch_input_cpu_output_cpu PRIVATE nn_handler_lib)

add_executable(multi_io_multi_batch_input_gpu_output_cpu multi_io_multi_batch_input_gpu_output_cpu/multi_io_multi_batch_input_gpu_output_cpu.cpp)
target_link_libraries(multi_io_multi_batch_input_gpu_output_cpu PRIVATE nn_handler_lib)

add_executable(multi_io_multi_batch_input_cpu_output_gpu multi_io_multi_batch_input_cpu_output_gpu/multi_io_multi_batch_input_cpu_output_gpu.cpp)
target_link_libraries(multi_io_multi_batch_input_cpu_output_gpu PRIVATE nn_handler_lib)

add_executable(multi_io_multi_batch_input_gpu_output_gpu multi_io_multi_batch_input_gpu_output_gpu/multi_io_multi_batch_input_gpu_output_gpu.cpp)
target_link_libraries(multi_io_multi_batch_input_gpu_output_gpu PRIVATE nn_handler_lib)
